# ajcProjet

./: README.md
Piechart/: CMakeLists.txt  core  main.c  pie  testarg
build-Piechart-Desktop-Debug/: CMakeCache.txt.prev  Makefile  Piechart  cmake_install.cmake
build-Piechart-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-24a6696d9f068628d43b.json  cmakeFiles-v1-0fa3d73588ee9c1be6d5.json  codemodel-v2-8d3192db3529b734d91e.json  directory-.-Debug-33d46f231a7bd51c8ebb.json  index-2023-07-31T08-29-25-0014.json  target-Piechart-Debug-74ba14469b8e072d8e7c.json
